styles/main.css
@font-face {
  font-family: "Zilla Slab";
  src: url("/fonts/ZillaSlab-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  size-adjust: 120%;
}

@font-face {
  font-family: "Zilla Slab";
  src: url("/fonts/ZillaSlab-Medium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
  size-adjust: 120%;
}

@font-face {
  font-family: "Zilla Slab";
  src: url("/fonts/ZillaSlab-SemiBold.ttf") format("truetype");
  font-weight: 600;
  font-style: normal;
  size-adjust: 120%;
}

@font-face {
  font-family: "Zilla Slab";
  src: url("/fonts/ZillaSlab-Italic.ttf") format("truetype");
  font-weight: normal;
  font-style: italic;
  size-adjust: 120%;
}

@import "tailwindcss";

@theme {
  --font-sans: "Zilla Slab", sans-serif;
  --color-brand: var(--color-indigo-200);
}

@layer base {
  body {
    @apply bg-black text-white/80 container max-w-3xl mx-auto px-4 sm:px-0;
  }
  a {
    @apply hover:text-brand cursor-pointer text-white;
  }
  .post {
    @apply leading-loose;
    a {
      @apply font-medium underline underline-offset-4;
    }
    code:not(pre code) {
      @apply px-1 bg-stone-900 rounded-md text-sm;
    }
    pre {
      @apply text-sm px-4 py-2 my-2 overflow-auto bg-stone-900!;
    }
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply font-semibold mt-6 mb-2 text-lg text-white;
    }
    ul {
      @apply list-disc list-inside my-2 ml-4;
    }
    ol {
      @apply list-decimal list-inside my-2 ml-4;
    }
    strong {
      @apply font-medium;
    }
    blockquote {
      @apply border-l-2 border-brand italic py-2 px-4 my-2 bg-stone-900;
    }
    img {
      @apply my-4 max-h-96 mx-auto;
    }
  }
}

